# ninjax

./: .gitignore  CLAUDE.md  NEXT_STEPS.md  README.md  pyproject.toml
examples/: clean_example.sh
examples/Testing/: config.ini  injection.json  log.out  runtime.txt
examples/Testing/Blackjax-ns_test/: blackjax_ns_samples.csv  complete_config.json  config.ini  log.out  runtime.txt
examples/Testing/Diagnosis_runs/SNR=100/: injection.json  log.out  runtime.txt
examples/Testing/Diagnosis_runs/SNR=35/: complete_config.json  injection.json  log.out  prior.prior  runtime.txt
examples/example_1/: chains_production.npz  complete_config.json  config.ini  copy_analysis.py  injection.json  log.out  prior.prior  results_NF.npz  results_production.npz  results_training.npz  runtime.txt  submit.sh  test.ini
examples/example_2/: complete_config.json  config.ini  log.out  runtime.txt  submit.sh
examples/example_3/: README.md  complete_config.json  config.ini  log.out  runtime.txt  submit.sh
examples/example_SSM/: complete_config.json  config.ini  copy_analysis.py  injection.json  log.out  prior.prior  runtime.txt
examples/example_SSM_wQM/: config.ini  injection.json  log.out  runtime.txt
examples/example_SSM_wStop/: complete_config.json  config.ini  copy_analysis.py  injection.json  log.out  runtime.txt  submit.sh
examples/example_blackjax_ns_aw/: config.ini  injection.json  log.out  metadata.json  runtime.txt  submit.sh
examples/example_blackjax_nss/: complete_config.json  config.ini  copy_analysis.py  injection.json  log.out  metadata.json  runtime.txt  submit.sh
examples/example_blackjax_smc/: complete_config.json  config.ini  log.out  metadata.json  runtime.txt  submit.sh
examples/example_multibanding/: config.ini
examples/pv2/: complete_config.json  config.ini  injection.json  prior.prior  submit.sh
src/ninjax/: .gitignore  acceptance_walk_kernel.py  analysis.py  blackjax_ns.py  likelihood.py  parser.py  prior.py  transforms.py
src/ninjax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ninjax/pipes/: default_config.ini  fiesta_pipe.py  gw_pipe.py  ninjax_pipe.py  pipe_utils.py
src/ninjax/samplers/: __init__.py  acceptance_walk_kernel.py  blackjax_ns_aw.py  blackjax_nss.py  blackjax_smc.py
test/: test_deprecated_keys.py
(+79 files in other folders)
